--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"nostr-fetch": "^0.15.1",
 		"nostr-tools": "^2.5.2",
 		"nostr-typedef": "^0.9.0",
 		"prettier": "^3.1.1",
