--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"nostr-fetch": "^0.15.1",
 		"nostr-tools": "^2.5.2",
-		"nostr-typedef": "^0.9.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-markdown": "^0.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
@@ -41,8 +41,5 @@
 	"type": "module",
 	"volta": {
 		"node": "22.2.0"
-	},
-	"dependencies": {
-		"svelte-markdown": "^0.4.1"
 	}
 }
