--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"@vitest/coverage-v8": "^1.6.0",
+		"canvas": "^2.11.2",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
